--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,6 +1,7 @@
-spring.application.name=employees-service
+spring.application.name=training-courses-service
 server.port=8200
 
 spring.cloud.config.uri=http://localhost:8888
 #spring.profiles.active=dev
 
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
